nearing final edit of mailbox submission

--- a/AU/alt-com-short.tex
+++ b/AU/alt-com-short.tex
@@ -30,6 +30,24 @@ MRREVIEWER = {Clifford H. Bergman},
        DOI = {10.1007/s00012-008-2073-1},
        URL = {http://dx.doi.org/10.1007/s00012-008-2073-1},
 }
+@article {MR1637665,
+    AUTHOR = {Lipparini, Paolo},
+     TITLE = {A characterization of varieties with a difference term. {II}.
+              {N}eutral {$=$} meet semi-distributive},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'ematiques},
+    VOLUME = {41},
+      YEAR = {1998},
+    NUMBER = {3},
+     PAGES = {318--327},
+      ISSN = {0008-4395},
+   MRCLASS = {08B05},
+  MRNUMBER = {1637665},
+MRREVIEWER = {E. W. Kiss},
+       DOI = {10.4153/CMB-1998-044-9},
+       URL = {http://dx.doi.org/10.4153/CMB-1998-044-9},
+}
 @article{Bergman-DeMeo-2016,
   author    = {Clifford Bergman and William DeMeo},
   title     = {Universal Algebraic Methods for Constraint Satisfaction Problems},
@@ -393,7 +411,7 @@ $t\in \Pol_{n+1}(\bA)$, we have
 $t(a,\bu) \mathrel{\gamma} t(a, \bv)$
 iff $t(b,\bu) \mathrel{\gamma} t(b, \bv)$.
 There are a number of different ways to define a commutator.
-See, for example,~\cite{MR0432511,MR541622,MR590312,MR1145556,MR1663558}.
+See, for example,~\cite{MR0432511,MR541622,MR590312,MR1145556,MR1663558,MR1257643}.
 In this note, the commutator $[\alpha, \beta]$ is defined to be the least
 congruence $\gamma$ such that $\CC{\alpha}{\beta}{\gamma}$ holds.
 \begin{comment}
