fixed otimes notation inconsistency

--- a/JLA/alt-com-new.tex
+++ b/JLA/alt-com-new.tex
@@ -6,7 +6,7 @@ Thus, $0_A = \{(a,a) \mid a\in A\} \leq \beta$.
 Denote by $D_\alpha$ the following subset of $\beta \times \beta$:
 \begin{equation}
   \label{eq:9009}
-D_\alpha =(\alpha \otimes \alpha) \cap (0_A \times 0_A)
+D_\alpha =(\alpha \mytimes \alpha) \cap (0_A \times 0_A)
 = \{((a,a), (b,b)) \in (0_A \times 0_A) \mid a\alphar b\}.
 \end{equation}
 Let $\Delta_{\beta, \alpha} = \Cg^{\bbeta}(D_\alpha)$ denote the congruence relation
@@ -63,7 +63,7 @@ for each $T \in  \Tol(A)$ follows:
 \end{equation}
 where
 $\Delta_{\beta, \alpha} = \Cg^{\bbeta}(D_\alpha)$ and
-$D_\alpha =(\alpha \otimes \alpha) \cap (0_A \times 0_A)$
+$D_\alpha =(\alpha \mytimes \alpha) \cap (0_A \times 0_A)$
 (as in~(\ref{eq:9009})).
 
 \begin{remarks}\
